try to fix selects for windows

--- a/main.scss
+++ b/main.scss
@@ -1115,14 +1115,13 @@ button {
 .panel-share {
   direction: rtl;
   z-index: 1;
+  & > * {
+    direction: ltr;
+  }
   @media (max-width: 850px) {
     z-index: 4;
     direction: ltr;
   }
-}
-
-.panel-share__inner {
-  direction: ltr;
 }
 
 .colors {
