--- a/index.pug
+++ b/index.pug
@@ -281,10 +281,13 @@ html(lang="en-US")
                   option(value=exp.v)=exp.n
 
           div.panel__export
-            button.minibutton(aria-label="copy to clipboard" v-on:click="copyExport")
+            button.minibutton(:class="{'minibutton--copy': isCopiying}" aria-label="copy to clipboard" v-on:click="copyExport")
               span.minibutton__label copy
               svg.minibutton__icon
                 use(xlink:href="#icon-copy")
+              svg.minibutton__icon.minibutton__icon--check
+                use(xlink:href="#icon-check")
+
             pre.panel__code(v-if="exportAs !== 'image'")
               code {{colorList}}
             div.panel__img.panel__img--export(v-if="exportAs === 'image'")
