fix: makes sure names are consitant

--- a/index.pug
+++ b/index.pug
@@ -57,7 +57,7 @@ html(lang="en-US")
         .panel__title
           h4.panel__settingtitle Palette Name
           h1.title
-            |{{paleteTitle}}
+            |{{paletteTitle}}
 
         label.panel__setting
           h4.panel__settingtitle Generation Method
@@ -263,7 +263,7 @@ html(lang="en-US")
           .panel__title
             h4.panel__settingtitle Save &amp; Share Palette
             h1.title
-              |{{paleteTitle}}
+              |{{paletteTitle}}
 
           label.panel__setting
             h4.panel__settingtitle
